# pufu

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/examples/: encode_encode_expand.rs
core/src/: codec.rs  config.rs  data_type.rs  decode.rs  decoder.rs  encode.rs  encoder.rs  endian.rs  error.rs  fixed_decode.rs  lib.rs  type_wapper.rs
core/src/marker/: mod.rs  rank0.rs  rank1.rs
core/src/sealed/: data_type.rs  fixed.rs  mod.rs  var1.rs
core/src/zc/: fixed.rs  mod.rs  sealed.rs  traits.rs  var1.rs
core/tests/: encode_encode_expand.rs
macros/: Cargo.toml
macros/src/: common.rs  decode.rs  encode.rs  lib.rs
macros/tests/: derive.rs
pufu/: Cargo.toml
pufu-macros/: Cargo.toml
pufu-macros/src/: lib.rs
pufu/src/: lib.rs
specs/: 0010-binary-serde.md  0011-encoder.md  0011-trait-layout-taxonomy.md  0012-codec-trait.md  0012-decoder.md  0015-field-encode.md  0016-field-decode.md  0017-config.md  0020-derive-macros.md
