[package]
name = "pufu-macros"
version.workspace = true
edition.workspace = true
description = "Derive macros for the pufu in-memory serialization/deserialization library"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }

[dev-dependencies]
pufu-core = { path = "../core" }
